@@ -30,7 +30,7 @@ public class Pipe {
     }
 
     /**
-     * Start the processing of the Source->Sink.
+     * Start the processing of the Source to the Sink.
      *
      * @param source the data generator
      * @param sink   the consumer of the data
@@ -87,8 +87,8 @@ public class Pipe {
         // the purpose of the assert, but there's no need to create the buffer if I don't need it and I still
         // want to throw the AssertionError if required
         if ((sourceRunner.getCount() - sinkRunner.getCount()) != 0) {
-            Integer[] counts = {new Integer(sourceRunner.getCount()),
-                                new Integer(sinkRunner.getCount())};
+            Integer[] counts = {Integer.valueOf(sourceRunner.getCount()),
+                                Integer.valueOf(sinkRunner.getCount())};
             String msg = zxJDBC.getString("inconsistentRowCount", counts);
 
             Py.assert_(Py.Zero, Py.newString(msg));
@@ -144,6 +144,7 @@ abstract class PipeRunner extends Thread {
     /**
      * Method run
      */
+    @Override
     public void run() {
 
         try {
@@ -216,6 +217,7 @@ class SourceRunner extends PipeRunner {
      *
      * @throws InterruptedException
      */
+    @Override
     protected void pipe() throws InterruptedException {
 
         PyObject row = Py.None;
@@ -270,6 +272,7 @@ class SinkRunner extends PipeRunner {
      *
      * @throws InterruptedException
      */
+    @Override
     protected void pipe() throws InterruptedException {
 
         PyObject row = Py.None;
