@@ -7,8 +7,9 @@ import java.io.DataOutputStream;
 import java.io.IOException;
 
 /**
- * @Deprecated Not used.  Delete in 2.6.
+ * @deprecated Not used.  Delete in 2.6.
  */
+@Deprecated
 public class LineNumberTable {
     int attName;
     Vector<Short> lines;
@@ -31,8 +32,8 @@ public class LineNumberTable {
     }
 
     public void addLine(int startpc, int lineno) {
-        lines.addElement(new Short((short) startpc));
-        lines.addElement(new Short((short) lineno));
+        lines.addElement(Short.valueOf((short) startpc));
+        lines.addElement(Short.valueOf((short) lineno));
     }
 
     public int length() {
